--- a/src/dotNetComicBook/dotNetComicBook.csproj
+++ b/src/dotNetComicBook/dotNetComicBook.csproj
@@ -104,6 +104,7 @@
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
     <Content Include="Views\ComicBooks\Detail.cshtml" />
+    <Content Include="Views\ComicBooks\test.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
